<!--Mykyta Dymchenko N01624422-->
<resources>
    <string name="app_name">MykytaLab7</string>
    <string name="menu_home">Home</string>
    <string name="menu_nick">Nick</string>
    <string name="menu_person">Person</string>
    <string name="menu_settings">Settings</string>
    <string name="student_name">Mykyta</string>
    <string name="mykyta_dymchenko">Mykyta Dymchenko</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string-array name="provinces_array">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="province">PROVINCE</string>
    <string name="index">INDEX</string>
    <string name="alert_ok">OK</string>
    <integer-array name="province_colors">
        <item>@color/blue</item>
        <item>@color/magenta</item>
        <item>@color/cyan</item>
        <item>@color/yellow</item>
        <item>@color/ltgray</item>
        <item>@color/dkgray</item>
        <item>@color/red</item>
        <item>@color/gray</item>
        <item>@color/green</item>
        <item>@color/orange</item>
        <item>@color/purple</item>
        <item>@color/teal</item>
        <item>@color/olive</item>
    </integer-array>
</resources>