<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_nick"
        android:title="@string/menu_nick"
        android:icon="@drawable/bike"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_person"
        android:title="@string/menu_person"
        android:icon="@drawable/person"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/settings"
        app:showAsAction="always"/>

</menu>